feat: two way binding added

--- a/views/home.html
+++ b/views/home.html
@@ -1,58 +1,74 @@
-  ${app.view('header')}
+${app.view('header')}
 
-
-  <div class="section no-pad-bot" id="index-banner">
-    <div class="container">
-      <br><br>
-      <h1 class="header center orange-text">Home</h1>
-      <div class="row center">
-        <h5 class="header col s12 light">Single Page application framework development</h5>
-      </div>
-      <div class="row center">
-        <a href="#about" id="download-button" class="btn-large waves-effect waves-light orange">About</a>
-      </div>
-      <br><br>
-
-    </div>
-  </div>
-
-
+<div class="section no-pad-bot" id="index-banner">
   <div class="container">
-    <div class="section">
+    <br><br>
+    <h1 class="header center orange-text">Home</h1>
+    <div class="row">
+      <h5 class="header col s12 light">Single Page application framework development <span bind="fname"></span></h5>
+      <input type="text" value="" name="fname" />
+      <input type="range" name="points" min="0" max="100" /><h1><span bind="points"></span></h1>
+      <label>Browser Select <h2><span bind="options"></span></h2></label>
+      
+      <select class="browser-default" name="options">
+        <option value="" disabled selected>Choose your option</option>
+        <option value="1">Option 1</option>
+        <option value="2">Option 2</option>
+        <option value="3">Option 3</option>
+      </select>
+      
+      <input type="date" class="datepicker" name="date"><h2<span bind="date"></span></h2>
+    </div>
+    <div class="row center">
+      <a href="#about" id="download-button" class="btn-large waves-effect waves-light orange">About</a>
+    </div>
+   
+    <br><br>
 
-      <!--   Icon Section   -->
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
-          </div>
-        </div>
+  </div>
+</div>
 
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
-          </div>
-        </div>
+<div class="container">
+  <div class="section">
 
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
-
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
-          </div>
+    <!--   Icon Section   -->
+    <div class="row">
+      <div class="col s12 m4">
+        <div class="icon-block">
+          <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
+          <h5 class="center">Speeds up development</h5>
+          <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our
+            custom components. Additionally, we refined animations and transitions to provide a smoother experience for
+            developers.</p>
         </div>
       </div>
 
+      <div class="col s12 m4">
+        <div class="icon-block">
+          <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
+          <h5 class="center">User Experience Focused</h5>
+
+          <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework
+            that incorporates components and animations that provide more feedback to users. Additionally, a single
+            underlying responsive system across all platforms allow for a more unified user experience.</p>
+        </div>
+      </div>
+
+      <div class="col s12 m4">
+        <div class="icon-block">
+          <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+          <h5 class="center">Easy to work with</h5>
+
+          <p class="light">We have provided detailed documentation as well as specific code examples to help new users
+            get started. We are also always open to feedback and can answer any questions a user may have about
+            Materialize.</p>
+        </div>
+      </div>
     </div>
-    <br><br>
+
   </div>
+  <br><br>
+</div>
 
-
-  ${app.view('footer')}
-  
+${app.view('footer')}
