feat: minified version of breezy added

--- a/views/about.html
+++ b/views/about.html
@@ -2,7 +2,7 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4">About</h1>
-          <p class="lead">Vivek Kumar (vvkkumar06@gmail.com) Full stack javascript developer</p>
+          <p class="lead">Vivek Kumar</p>
         </div>
       </div>
 </section>
